test/fixtures/syntaxError/src/test.js


// arbitrary broken JavaScriptt

arostien:*&SRT)(*LIRSETN:R*ST&)(R*ST&J(*RSTL));

window.foo = true;
